@@ -12,7 +12,13 @@ import java.util.Map;
 public class core {
     public static void generateDefaultConfig() throws IOException {
         String documentsPath = User.getUserSystemPath().toString();
-        Path configFilePath = Paths.get(documentsPath, "config.json");
+
+        Path folderPath = Paths.get(documentsPath, "TicketProgramm");
+        Path configFilePath = folderPath.resolve("config.conf");
+
+        if (!Files.exists(folderPath)) {
+            Files.createDirectories(folderPath);
+        }
 
         Map<String, Object> defaultConfig = new HashMap<>();
         defaultConfig.put("lastUserIdCreated", 0);
@@ -22,13 +28,16 @@ public class core {
         ObjectMapper objectMapper = new ObjectMapper();
         try {
             objectMapper.writeValue(new File(configFilePath.toString()), defaultConfig);
-            System.out.println("Default config.json erstellt: " + configFilePath);
         } catch (IOException e) {
-            System.out.println("Error beim erstellen der config.json: " + e.getMessage());
+            throw e;
         }
     }
-    public static void checkForConfig() throws IOException{
-        if (!(Files.exists(Path.of(User.getUserSystemPath() + "/config.json")))) {
+
+    public static void checkForConfig() throws IOException {
+        String documentsPath = User.getUserSystemPath().toString();
+        Path configFilePath = Paths.get(documentsPath, "TicketProgramm", "config.json");
+
+        if (!Files.exists(configFilePath)) {
             generateDefaultConfig();
         }
     }
